<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grdnt"
    tools:context=".Menu">

    <Button
        android:id="@+id/bttnCodigoTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo_transito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/buttonMisVehiculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mis_vehiculos"
        android:onClick="listarVehiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttnCodigoTrans"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/buttonMisMultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mis_Multas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMisVehiculos"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>